--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ai": "^4.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
+    "lodash.orderby": "^4.6.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
@@ -34,6 +36,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash.orderby": "^4.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
