--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@ai-sdk/xai": "^1.0.5",
+    "@point-of-sale/receipt-printer-encoder": "^3.0.2",
+    "@point-of-sale/webbluetooth-receipt-printer": "^2.0.0",
+    "@point-of-sale/webserial-receipt-printer": "^2.0.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
