--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-bluetooth": "^0.0.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
